code/human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_2.wast
(assert_invalid
  (module (func $global-index (unreachable) (drop (global.get 0))))
  "unknown global"
)